"Snap to Same Target" don't work as expected #113801

Closed
opened 2023-10-17 04:42:13 +02:00 by arius-cr · 1 comment

System Information
Operating system: Windows-10-10.0.19041-SP0
Graphics card: NVIDIA GeForce RTX 4070 Ti/PCIe/SSE2 (4.5.0 NVIDIA 537.42)

Blender Version
Broken: 3.6.0 - 3.6.4, 4.0.0 beta (October 13, 03:12:44 1c4b2ad17f)
Worked: 3.3.0, 3.4.0, 3.5.0, 3.5.1

Short description of error
The behavior of "Snap to Same Target" in 3.6.4 is different from 3.3.0:

In 3.3.0, when the "Snap to Same Target" option is enabled, no matter where the vertex is (even close to Object B), the vertex will snap to the nearest object (Object A), which was calculated according to the original location of the selected vertex.

In 3.6.4, when I move the vertex close to Object B, it will snap to Object B.

In 4.0.0 (beta, October 13, 03:12:44 1c4b2ad17f), when I move the vertex just a little close to Object B, it will snap to Object A, but if more closer to Object B, it will snap to Object B.

Exact steps for others to reproduce the error
Based on the attached .blend file Snap_to_Same_Target_not_work_as_expected.blend:

  1. Select the Plane and switch to Edit mode.
  2. Select one vertex near Cube A.
  3. Press "G", move vertex close to Cube B.
  4. In 3.3.0, the vertex will snap to Cube A (expected), but in 3.6.4 and 4.0.0 (beta) it will snap to Cube B (not expected).
**System Information** Operating system: Windows-10-10.0.19041-SP0 Graphics card: NVIDIA GeForce RTX 4070 Ti/PCIe/SSE2 (4.5.0 NVIDIA 537.42) **Blender Version** Broken: 3.6.0 - 3.6.4, 4.0.0 beta (October 13, 03:12:44 1c4b2ad17f5f) Worked: 3.3.0, 3.4.0, 3.5.0, 3.5.1 **Short description of error** The behavior of "Snap to Same Target" in 3.6.4 is different from 3.3.0: <video src="/attachments/7f53b805-9a64-4b97-8026-775a92e731ba" title="Snap_to_Same_Target_not_work_as_expected.mp4" controls></video> In 3.3.0, when the "Snap to Same Target" option is enabled, no matter where the vertex is (even close to Object B), the vertex will snap to the nearest object (Object A), which was calculated according to the original location of the selected vertex. In 3.6.4, when I move the vertex close to Object B, it will snap to Object B. In 4.0.0 (beta, October 13, 03:12:44 1c4b2ad17f5f), when I move the vertex just a little close to Object B, it will snap to Object A, but if more closer to Object B, it will snap to Object B. **Exact steps for others to reproduce the error** Based on the attached .blend file [Snap_to_Same_Target_not_work_as_expected.blend](/attachments/a0b090e4-5255-47f0-8318-ad9a427a4ed6): 1. Select the Plane and switch to Edit mode. 2. Select one vertex near Cube A. 3. Press "G", move vertex close to Cube B. 4. In 3.3.0, the vertex will snap to Cube A (expected), but in 3.6.4 and 4.0.0 (beta) it will snap to Cube B (not expected).
arius-cr added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-17 04:42:14 +02:00
Iliya Katushenock added the
Interest
Modeling
label 2023-10-17 13:52:24 +02:00

I can confirm.
The "Snap to Same Target" feature was never very clear to me.
Now I understand how it works.

I can confirm. The "Snap to Same Target" feature was never very clear to me. Now I understand how it works.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-17 19:53:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113801
No description provided.