source/blender/editors/transform/transform_snap_object_editmesh.cc
@@ -406,14 +406,10 @@ static bool nearest_world_editmesh(SnapCache_EditMesh *em_cache,
     return false;
   }
 
-  float4x4 imat = math::invert(obmat);
-  float3 init_co = math::transform_point(imat, float3(sctx->runtime.init_co));
-  float3 curr_co = math::transform_point(imat, float3(sctx->runtime.curr_co));
-
   BVHTreeNearest nearest{};
-  nearest.dist_sq = sctx->ret.dist_px_sq;
+  nearest.dist_sq = sctx->ret.dist_nearest_sq;
   if (nearest_world_tree(
-          sctx, em_cache->bvhtree[2], em_cache->nearest_callback, init_co, curr_co, em, &nearest))
+          sctx, em_cache->bvhtree[2], em_cache->nearest_callback, obmat, em, &nearest))
   {
     SnapData::register_result(sctx, ob_eval, nullptr, obmat, &nearest);
     return true;
